codemirror: Fix suggestions icon color in dark mode (#37819)
I cannot reproduce this problem locally but it looks like `fill` might
not be a valid CSS rule for `svg` and therefore it is somehow removed
in production builds.
Hopefully applying it to `path` will work.

--- a/client/search-ui/src/input/CodeMirrorQueryInput.module.scss
+++ b/client/search-ui/src/input/CodeMirrorQueryInput.module.scss
@@ -100,8 +100,11 @@
                     height: 1.25rem;
 
                     svg {
-                        fill: var(--search-query-text-color);
                         flex-shrink: 0;
+
+                        path {
+                            fill: var(--search-query-text-color);
+                        }
                     }
 
                     :global(.cm-completionLabel) {
